# remote-mcp-server

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  database_setup.sql  pyproject.toml  requirements.txt  server.py  setup_db.py
deployment/: render.yaml  vercel.json
examples/: test_queries.sql
